styles.css
.first-pic{
    width: 100%;
    height: 100%;
}

html,
body {
    margin: 0px;
    height: 100%;
}

body {
    display: flex;
    border: 1px black solid;
    height: 100%;
}

.left {
    background-image: url("halie-west-25xggax4bSA-unsplash.jpg");
    background-size: cover;
    padding: 100px;
}

.right {
    display: flex;
    border: 1px black solid;
    flex-direction: column;
    width: auto;
    flex: 1;
}

.second-pic {
    width: 200px;
    height: auto;
}

.top {
    flex: 2;
    padding: 50px;
    border-radius: 10px round;
    background-color: rgb(226, 210, 210);
}

.middle {
    display: flex;
    flex: 1;
    padding: 50px;
    border-radius: 10px round;
}

.container {
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    margin-bottom: 20px;
}

label {
    inline-size: 200px;
    overflow-wrap: break-word;
    padding-right: 50px;
}

.bottom {
    flex: 2;
    border-radius: 10px round;
    padding: 30px 50px;
    background-color: rgb(226, 210, 210);
    box-shadow: inset;
}

